--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "express-fileupload": "^1.3.1",
     "fs": "0.0.1-security",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16",
-    "socket.io": "^4.5.0"
+    "socket.io": "^4.5.0",
+    "uuid": "^8.3.2"
   }
 }
