--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon upload.js",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js --ignore 'uploads/*'"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "fs": "0.0.1-security",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
+    "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
     "nodemon": "^2.0.16",
     "socket.io": "^4.5.0",
