--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.3.1",
     "fs": "0.0.1-security",
+    "jimp": "^0.16.1",
     "joi-password-complexity": "^5.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
